--- a/tmux/.config/tmux/tmux.conf
+++ b/tmux/.config/tmux/tmux.conf
@@ -6,19 +6,25 @@ bind r source-file ~/.config/tmux/tmux.conf \; display "Sourced ~/.config/tmux/t
 set -g mouse on
 
 # 1 based indexing
-set -g base-index 1
+set -g base-index k
 set-window-option -g pane-base-index 1
 set -g pane-base-index 1
 
 # colors / layout
 set -g default-terminal "screen-256color"
 set -g status-style bg=colour55,fg=colour255
+set -g status-interval 1
+set -g status-left " #S     #[default]"
+set -g status-left-length 60
+set -g status-right "#(tmux-mem-cpu-load --interval 1 --averages-count 0)    #(date +'%a %b %d     %I:%M:%S %p') "
+set -g status-right-length 140
 
 set -g pane-border-status top
 set -g pane-active-border-style bg=colour55,fg=colour255
 set -g pane-border-style bg=colour0,fg=colour245
 set -g pane-border-lines heavy
 set -g pane-border-format "#P: #{pane_current_command}"
+
 
 # Better splitting keybinds
 unbind v
