--- a/tmux/.config/tmux/tmux.conf
+++ b/tmux/.config/tmux/tmux.conf
@@ -14,10 +14,10 @@ set -g pane-base-index 1
 set -g default-terminal "screen-256color"
 set -g status-style bg=colour55,fg=colour255
 set -g status-interval 1
-set -g status-left " #S     #[default]"
+set -g status-left " #S  |  #[default]"
 set -g status-left-length 60
-set -g status-right "#(tmux-mem-cpu-load --interval 1 --averages-count 0)    #(date +'%a %b %d     %I:%M:%S %p') "
-set -g status-right-length 140
+set -g status-right "#(tmux-mem-cpu-load --interval 1 --averages-count 0) "
+set -g status-right-length 60
 
 set -g pane-border-status top
 set -g pane-active-border-style bg=colour55,fg=colour255
