--- a/tmux/.config/tmux/tmux.conf
+++ b/tmux/.config/tmux/tmux.conf
@@ -6,13 +6,13 @@ bind r source-file ~/.config/tmux/tmux.conf \; display "Sourced ~/.config/tmux/t
 set -g mouse on
 
 # 1 based indexing
-set -g base-index k
+set -g base-index 1
 set-window-option -g pane-base-index 1
 set -g pane-base-index 1
 
 # colors / layout
 set -g default-terminal "screen-256color"
-set -g status-style bg=colour55,fg=colour255
+set -g status-style bg=colour55,fg=colour255 # purple bg, white fg
 set -g status-interval 1
 set -g status-left " #S  |  #[default]"
 set -g status-left-length 60
@@ -47,4 +47,3 @@ unbind C-p
 
 bind C-n previous-window
 bind C-p next-window
-
